Add collapsible hamburger menu to navigation

--- a/development.html
+++ b/development.html
@@ -11,7 +11,7 @@
     <header class="navbar">
         <div class="container">
             <div class="logo"><img src="assets/waveshift-logo.png" alt="WaveShift Logo" style="height: 150px; vertical-align: middle;"></div>
-            <nav class="nav-links">
+            <nav class="nav-links" id="navMenu">
                 <a href="index.html">Home</a>
                 <a href="technology.html">Technology</a>
                 <a href="economics.html">Economics</a>
@@ -20,6 +20,11 @@
                 <a href="team.html">Team</a>
                 <a href="contact.html">Contact</a>
             </nav>
+            <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
     </header>
 
