Replace team member logos with colored-logo_1-removebg-preview.png

--- a/team.html
+++ b/team.html
@@ -53,7 +53,7 @@
                             <a href="https://www.linkedin.com/in/libasnyder/" target="_blank" class="team-member-link">LinkedIn Profile</a>
                         </div>
                         <div class="team-member-logo">
-                            <img src="assets/waveshift-logo.png" alt="WaveShift">
+                            <img src="assets/colored-logo_1-removebg-preview.png" alt="WaveShift">
                         </div>
                     </div>
 
@@ -70,7 +70,7 @@
                             <a href="https://www.linkedin.com/in/david-macoretta-25b8057b/" target="_blank" class="team-member-link">LinkedIn Profile</a>
                         </div>
                         <div class="team-member-logo">
-                            <img src="assets/waveshift-logo.png" alt="WaveShift">
+                            <img src="assets/colored-logo_1-removebg-preview.png" alt="WaveShift">
                         </div>
                     </div>
                 </div>
