Fix Liba photo reference: change Liba.png to Liba.PNG

--- a/team.html
+++ b/team.html
@@ -43,7 +43,7 @@
                     <!-- TEAM MEMBER 1 -->
                     <div class="team-member-card">
                         <div class="team-member-photo">
-                            <img src="assets/Liba.png" alt="Liba Snyder">
+                            <img src="assets/Liba.PNG" alt="Liba Snyder">
                         </div>
                         <div class="team-member-info">
                             <h2 class="team-member-name">Liba Snyder</h2>
