--- a/team.html
+++ b/team.html
@@ -20,7 +20,7 @@
                 <a href="team.html" class="active">Team</a>
                 <a href="contact.html">Contact</a>
             </nav>
-            <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">
+            <button class="menu-toggle active" id="menuToggle" aria-label="Toggle menu">
                 <span></span>
                 <span></span>
                 <span></span>
