Replace all page logos with colored-logo_1-removebg-preview.png

--- a/pitch-deck.html
+++ b/pitch-deck.html
@@ -110,7 +110,7 @@
 <body>
     <header class="navbar">
         <div class="container">
-            <div class="logo"><img src="assets/waveshift-logo.png" alt="WaveShift Logo"></div>
+            <div class="logo"><img src="assets/colored-logo_1-removebg-preview.png" alt="WaveShift Logo"></div>
             <nav class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="pitch-deck.html" class="active">Pitch Deck</a>
