--- a/technology.html
+++ b/technology.html
@@ -10,7 +10,7 @@
 <body>
     <header class="navbar">
         <div class="container">
-            <div class="logo"><img src="assets/waveshift-logo.png" alt="WaveShift Logo" style="height: 150px; vertical-align: middle;"></div>
+            <div class="logo"><img src="assets/colored-logo_1-removebg-preview.png" alt="WaveShift Logo" style="height: 150px; vertical-align: middle;"></div>
             <nav class="nav-links" id="navMenu">
                 <a href="index.html">Home</a>
                 <a href="technology.html" class="active">Technology</a>
